tests/should_fail/let_destructure_tuple_on_string.nv
module test
// let destructure: tuple pattern on String (not a tuple)
let (a, b) = "hello"
